--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 
-<body role="main">
+<body role="application">
 
     <div class="bg_img"></div>
     <div class="center-border">
