--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="main">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
     </style>
 </head>
 
-<body role="application">
+<body>
 
     <div class="bg_img"></div>
     <div class="center-border">
