--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-
+<main>
     <div class="bg_img"></div>
     <div class="center-border">
         <img class="hero-img" src="./images/illustration-hero.png" alt="illustration hero">
@@ -57,6 +57,7 @@
             <button class="button2" type="button">Cancel Order</button>
         </div>
     </div>
+    </main>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/lukakavtarra">Luka Kavtaradze</a>.
     </div>
